--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^6.1.6",
     "@mui/material": "^5.0.3",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,9 +17,9 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.69.5",
-    "web-vitals": "^2.1.4",
-    "redux-devtools-extension": "^2.13.9"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
